<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_padding"
    tools:context=".AdvancedSearch">

    <EditText
        android:id="@+id/location_search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/search_location_hint"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/room_type_search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/location_search_edit_text"
        app:layout_constraintStart_toStartOf="@+id/location_search_edit_text"
        android:hint="@string/seach_room_type_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/location_search_edit_text" />

    <EditText
        android:id="@+id/price_search_edit_text"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/room_type_search_edit_text"
        app:layout_constraintStart_toStartOf="@+id/room_type_search_edit_text"
        android:hint="@string/search_price_hint"
        app:layout_constraintTop_toBottomOf="@+id/room_type_search_edit_text" />

    <EditText
        android:id="@+id/owner_search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/price_search_edit_text"
        app:layout_constraintStart_toStartOf="@+id/price_search_edit_text"
        android:hint="@string/search_owner"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/price_search_edit_text" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_shape"
        android:text="@string/search_button_text"
        app:layout_constraintEnd_toEndOf="@+id/owner_search_edit_text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/owner_search_edit_text"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@+id/owner_search_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>