<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/action_search"
    android:title="@string/search_title"
    app:actionViewClass="android.widget.SearchView"
    app:showAsAction="always"/>
    <item android:id="@+id/action_advanced_search"
        android:title="advanced_search"
        app:showAsAction="never"/>
</menu>