...
            android:id="@+id/location_icon"
            android:padding="@dimen/icon_internal_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/location_icon_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/location"
            app:layout_constraintStart_toEndOf="@id/price"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/map_marker" />

        <TextView
            android:id="@+id/location"
...
